<resources>
    <string name="app_name">eCommerce</string>
    <string name="todo">todo</string>
    <string name="app_slogan">Find, Discover, Choose and Buy anything Online.</string>
    <string name="edt_phone">Phone Number</string>
    <string name="edt_password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="edt_name">Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open_drawer_content">Open navigation drawer</string>
    <string name="close_drawer_content">Close navigation drawer</string>
</resources>