<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity">

    <ImageView
        android:contentDescription="@string/todo"
        android:background="#000000"
        android:alpha="0.7"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:layout_centerInParent="true"
        android:contentDescription="@string/todo"
        android:id="@+id/login_app_logo"
        android:src="@drawable/applogo"
        android:layout_width="250dp"
        android:layout_height="100dp" />

    <EditText
        android:id="@+id/edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_app_logo"
        android:background="@drawable/input_design"
        android:padding="12dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/edt_phone"
        android:inputType="phone"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/lily_script_one"
        android:autofillHints="@string/todo" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_phone_number"
        android:background="@drawable/input_design"
        android:padding="12dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/edt_password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/lily_script_one"
        android:autofillHints="@string/todo" />

        <com.rey.material.widget.CheckBox
            android:layout_marginBottom="8dp"
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/login_btn"
            style="@style/Material.Drawable.CheckBox"
            android:text="@string/remember_me"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/lily_script_one"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            app:cbd_strokeColor="@color/colorPrimary"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignBaseline="@id/remember_me"
            android:layout_alignEnd="@id/remember_me"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:text="@string/forget_password"
            android:textSize="16sp"
            android:fontFamily="@font/lily_script_one"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/admin_panel"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/buttons"
        android:padding="12dp"
        android:fontFamily="@font/lily_script_one"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:text="Login"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/admin_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="6dp"
        android:text="I'm an Admin?"
        android:textSize="16sp"
        android:fontFamily="@font/lily_script_one"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/not_admin_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="6dp"
        android:text="I'm not an Admin?"
        android:textSize="16sp"
        android:fontFamily="@font/lily_script_one"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="invisible"/>

</RelativeLayout>